@@ -94,12 +94,10 @@ else()
 		list(APPEND PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/gl-common.c)
 		include_directories(${OPENGLES2_INCLUDE_DIR})
 	endif()
-	if(NOT BUILD_GL AND NOT BUILD_GLES2)
-		if(SDL_VERSION EQUAL "2")
-			list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl2.c)
-		else()
-			list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl1.c)
-		endif()
+	if(SDL_VERSION EQUAL "2")
+		list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl2.c)
+	else()
+		list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl1.c)
 	endif()
 endif()
 
